<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayoutedit_task"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iiitd.mc.timetracker.EditTaskActivity" >

	<TableLayout
	    android:id="@+id/editTable"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent" >

	    <TableRow
	        android:id="@+id/row1"
	        android:layout_marginTop="20dip" >

	        <TextView
	            android:id="@+id/parentnametextview"
	            android:layout_width="wrap_content"
	            android:text="@string/parentname"
	            android:textSize="20sp" />

	        <!--
	           <AutoCompleteTextView
	                 android:id="@+id/taskSelectionBox"
	                 android:layout_height="wrap_content"
	                 android:layout_width="wrap_content"
	                 android:ems="10"
	                 android:gravity="top|left"
	                 android:inputType="textAutoComplete|textAutoCorrect"/>
	        -->

	        <EditText
	            android:id="@+id/parentEdtitext"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="text" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/row2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >

	        <TextView
	            android:id="@+id/tasknametextview"
	            android:layout_height="wrap_content"
	            android:text="@string/taskname"
	            android:textSize="20sp" />

	        <EditText
	            android:id="@+id/tasknameedittext"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="text" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/row3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp" >

	        <TextView
	            android:id="@+id/descTextview"
	            android:layout_height="wrap_content"
	            android:text="@string/description"
	            android:textSize="20sp" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/row4"
	        android:layout_width="match_parent" >

	        <EditText
	            android:id="@+id/descEdittext"
	            android:layout_width="match_parent"
	            android:layout_height="80dp"
	            android:layout_span="2"
	            android:layout_weight="1"
	            android:background="@drawable/border"
	            android:ems="10"
	            android:gravity="left|top"
	            android:inputType="textMultiLine"
	            android:maxLines="10"
	            android:scrollbars="vertical" />
	    </TableRow>

	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_marginTop="40dp">

	        <Button
	            android:id="@+id/btnEdit"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:background="@drawable/roundedbutton"
	            android:text="@string/btnEdit"
	            android:width="160dp" />

	        <Button
	            android:id="@+id/btnUpdate"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:background="@drawable/roundedbutton"
	            android:text="@string/btnUpdate"
	            android:width="160dp" />

	        <Button
	            android:id="@+id/btnCancel"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_weight="1"
	            android:background="@drawable/roundedbutton"
	            android:text="@string/btnCancel"
	            android:width="170dp" />
	    </TableRow>
	</TableLayout>
</RelativeLayout>
