<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iiitd.mc.timetracker.EditRecordingActivity" >

    <TableRow
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/parentnametextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:text="@string/taskname" />
        <!--
<AutoCompleteTextView
android:id="@+id/taskSelectionBox"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:ems="10"
android:gravity="top|left"
android:inputType="textAutoComplete|textAutoCorrect"/>
        -->

        <EditText
            android:id="@+id/Taskname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/starttimetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starttime" />

        <EditText
            android:id="@+id/tasknameedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row2"
        android:layout_marginTop="40dp" >

        <TextView
            android:id="@+id/stoptimetextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stoptime" />

        <EditText
            android:id="@+id/stoptimeedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/row4" >

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="250dp"
            android:layout_weight="1"
            android:text="@string/btnUpdate"
            android:width="160dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="250dp"
            android:layout_weight="1"
            android:text="@string/btnCancel"
            android:width="170dp" />
    </TableRow>
</RelativeLayout>
