<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="iiitd.mc.timetracker.NewTaskActivity" 
    android:id="@+id/relativelayoutnew_task">

 	<TableRow 
 	    	android:layout_width ="match_parent"
 	    	android:layout_height ="wrap_content"
 	    	android:id="@+id/row1"
 	    	android:layout_marginTop="20dp">

 		<TextView
 		    android:id="@+id/parentnametextview"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:gravity="top|left"
 		    android:text="@string/parentname" />

           <AutoCompleteTextView
                 android:id="@+id/taskSelectionBox"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:ems="10"
                 android:gravity="top|left"
                 android:inputType="textAutoComplete|textAutoCorrect"/>
                 
         </TableRow>
         
 		 <TableRow
 		     	android:layout_width="match_parent"
 		     	android:layout_height="wrap_content"
 		     	android:layout_below="@+id/row1"
 		     	android:layout_marginTop="40dp"
 		     	android:id="@+id/row2">

             <TextView
                 android:id="@+id/tasknametextview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/taskname" />
             
             <EditText
               android:id="@+id/tasknameedittext"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:inputType="text" />
                 
         	</TableRow>
         	<TableRow
         	    android:layout_width="match_parent"
 		     	android:layout_height="wrap_content"
 		     	android:layout_below="@+id/row2"
 		     	android:layout_marginTop="60dp" 
 		     	android:id="@+id/row3">
              <TextView 
                  android:id="@+id/description"
                  android:text="@string/description"
                  android:layout_width="wrap_content"
             	  android:layout_height="wrap_content" />
        
         </TableRow>
         <TableRow
             	android:layout_width="match_parent"
 		     	android:layout_height="wrap_content"
 		     	android:layout_below="@+id/row3"
 		     	android:id="@+id/row4">

             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:background="@drawable/border"
                 android:ems="10"
                 android:inputType="textMultiLine"
                 android:maxLines="10"
                 android:scrollbars="vertical" />

          </TableRow>
          <TableRow 
              	android:layout_width="match_parent"
 		     	android:layout_height="wrap_content"
 		     	android:layout_below="@+id/row4" >
             	
              	<Button 
              	    android:id="@+id/btnDone"
              	    android:layout_width="wrap_content"
              	    android:layout_height="wrap_content"
              	    android:layout_marginTop="100dp"
              	    android:text="@string/btnDone"
              	    android:width="160dp"
              	    android:background="@drawable/roundedbutton"
              	    android:layout_marginLeft="0dp"/>

              	<Button
              	    android:id="@+id/btnClear"
              	    android:layout_width="wrap_content"
              	    android:layout_height="wrap_content"
              	    android:layout_marginRight="0dp"
              	    android:layout_marginTop="100dp"
              	    android:text="@string/btnClear"
              	    android:width="170dp" 
              	    android:background="@drawable/roundedbutton" 
              	    android:layout_marginLeft="15dp"/>
              
          </TableRow>
      
</RelativeLayout>
