<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/running_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/pausestop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Task.Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:format="%s"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btnPause"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:onClick="Pause"
                android:padding="10dp"
                android:text="@string/btnPause"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnResume"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:onClick="Resume"
                android:padding="10dp"
                android:text="@string/btnResume"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:onClick="Stop"
                android:text="@string/btnStop" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>